1.修改配置文件反射加载机制 2.目前已支持：img2img, txt2img, inpaint 3.controlnet待测试client效果

--- a/config/general_config.yaml
+++ b/config/general_config.yaml
@@ -1,5 +1,57 @@
 base_model_path: '/data/cx/ysp/aigc-smart-painter/models/stable-diffusion-v1-5'
+inpaint_model_path: '/data/cx/ysp/aigc-smart-painter/models/stable-diffusion-inpainting'
 device: '7'
 scheduler: 'PNDMScheduler' # aviliables are DDPMScheduler,DDIMScheduler,PNDMScheduler,LMSDiscreteScheduler,EulerDiscreteScheduler,EulerAncestralDiscreteScheduler,DPMSolverMultistepScheduler,
 fp16: True
 smart_mode: True  #是否自动进行长边等比例缩放 （SD只能比较好的生成512的图片）
+
+controlnet_gallary:
+  canny:  '/data/cx/ysp/aigc-smart-painter/models/sd-controlnet-canny'
+  openpose: '/data/cx/ysp/aigc-smart-painter/models/sd-controlnet-openpose'
+
+# 框架基础模型配配置
+pipes:
+  txt2img:
+    class_name: 'StableDiffusionPipeline'
+    pretrained_model_name_or_path: '/data/cx/ysp/aigc-smart-painter/models/stable-diffusion-v1-5'
+    torch_dtype: 'torch.float16'
+    device: '7'
+    scheduler: 'PNDMScheduler'
+    mode: 'on'
+  img2img:
+    class_name: 'StableDiffusionImg2ImgPipeline'
+    pretrained_model_name_or_path: '/data/cx/ysp/aigc-smart-painter/models/stable-diffusion-v1-5'
+    torch_dtype: 'torch.float16'
+    device: '7'
+    scheduler: 'PNDMScheduler'
+    mode: 'on'
+  inpaint:
+    class_name: 'StableDiffusionInpaintPipeline'
+    pretrained_model_name_or_path: '/data/cx/ysp/aigc-smart-painter/models/stable-diffusion-inpainting'
+    torch_dtype: 'torch.float16'
+    device: '7'
+    scheduler: 'PNDMScheduler'
+    mode: 'on'
+  canny-control:
+    class_name: 'StableDiffusionControlNetPipeline'
+    pretrained_model_name_or_path: '/data/cx/ysp/aigc-smart-painter/models/stable-diffusion-v1-5'
+    controlnet:
+        class_name: 'ControlNetModel'
+        pretrained_model_name_or_path: '/data/cx/ysp/aigc-smart-painter/models/sd-controlnet-canny'
+    torch_dtype: 'torch.float16'
+    device: '7'
+    scheduler: 'PNDMScheduler'
+    mode: 'on'
+  open-pose-control:
+    class_name: 'StableDiffusionControlNetPipeline'
+    pretrained_model_name_or_path: '/data/cx/ysp/aigc-smart-painter/models/stable-diffusion-v1-5'
+    controlnet:
+      class_name: 'ControlNetModel'
+      pretrained_model_name_or_path: '/data/cx/ysp/aigc-smart-painter/models/sd-controlnet-openpose'
+    torch_dtype: 'torch.float16'
+    device: '7'
+    scheduler: 'PNDMScheduler'
+    mode: 'on'
+
+
+
