--- a/config/general_config.yaml
+++ b/config/general_config.yaml
@@ -25,49 +25,78 @@ yolo:
 
 # SD框架基础模型配配置
 pipes:
-  txt2img:
+  txt2img: #基础文生图
     class_name: 'StableDiffusionPipeline'
     pretrained_model_name_or_path: '/data/cx/ysp/aigc-smart-painter/models/stable-diffusion-v1-5'
     torch_dtype: 'torch.float16'
     device: 'cuda:2'
     scheduler: 'PNDMScheduler'
     mode: 'on'
-  img2img:
+  img2img: #基础图生图
     class_name: 'StableDiffusionImg2ImgPipeline'
     pretrained_model_name_or_path: '/data/cx/ysp/aigc-smart-painter/models/stable-diffusion-v1-5'
     torch_dtype: 'torch.float16'
     device: 'cuda:2'
     scheduler: 'PNDMScheduler'
-    mode: 'on'
-  inpaint:
+    mode: 'off'
+  inpaint: #基础重绘
     class_name: 'StableDiffusionInpaintPipeline'
     pretrained_model_name_or_path: '/data/cx/ysp/aigc-smart-painter/models/chilloutmix_NiPrunedFp32Fix'
     torch_dtype: 'torch.float16'
     device: 'cuda:2'
     scheduler: 'PNDMScheduler'
+    mode: 'off'
+#  controlnet_inpaint_openpose: #蒙版+contronet控制重绘
+#    class_name: 'StableDiffusionControlNetInpaintPipeline'
+#    pretrained_model_name_or_path: '/data/cx/ysp/aigc-smart-painter/models/chilloutmix_NiPrunedFp32Fix'
+#    controlnet:
+#      class_name: 'ControlNetModel'
+#      torch_dtype: 'torch.float16'
+#      pretrained_model_name_or_path: '/data/cx/ysp/aigc-smart-painter/models/sd-controlnet-openpose'
+#    torch_dtype: 'torch.float16'
+#    device: 'cuda:3'
+#    scheduler: 'PNDMScheduler'
+#    mode: 'on'
+  controlnet_inpaint_multi: #蒙版+contronet控制重绘
+    class_name: 'StableDiffusionControlNetInpaintPipeline'
+    pretrained_model_name_or_path: '/data/cx/ysp/aigc-smart-painter/models/chilloutmix_NiPrunedFp32Fix'
+    controlnet:
+      - type: "openpose"
+        class_name: 'ControlNetModel'
+        torch_dtype: 'torch.float16'
+        pretrained_model_name_or_path: '/data/cx/ysp/aigc-smart-painter/models/sd-controlnet-openpose'
+      - type: "canny"
+        class_name: 'ControlNetModel'
+        torch_dtype: 'torch.float16'
+        pretrained_model_name_or_path: '/data/cx/ysp/aigc-smart-painter/models/sd-controlnet-canny'
+    torch_dtype: 'torch.float16'
+    device: 'cuda:3'
+    scheduler: 'PNDMScheduler'
     mode: 'on'
-  canny-control:
+  canny_control: #controlnet控制
     class_name: 'StableDiffusionControlNetPipeline'
     pretrained_model_name_or_path: '/data/cx/ysp/aigc-smart-painter/models/stable-diffusion-v1-5'
     controlnet:
+      - type: "canny"
         class_name: 'ControlNetModel'
         torch_dtype: 'torch.float16'
         pretrained_model_name_or_path: '/data/cx/ysp/aigc-smart-painter/models/sd-controlnet-canny'
     torch_dtype: 'torch.float16'
     device: 'cuda:2'
     scheduler: 'UniPCMultistepScheduler'
-    mode: 'on'
-  openpose-control:
+    mode: 'off'
+  openpose_control:
     class_name: 'StableDiffusionControlNetPipeline'
     pretrained_model_name_or_path: '/data/cx/ysp/aigc-smart-painter/models/stable-diffusion-v1-5'
     controlnet:
-      class_name: 'ControlNetModel'
-      torch_dtype: 'torch.float16'
-      pretrained_model_name_or_path: '/data/cx/ysp/aigc-smart-painter/models/sd-controlnet-openpose'
+     - type: "openpose"
+       class_name: 'ControlNetModel'
+       torch_dtype: 'torch.float16'
+       pretrained_model_name_or_path: '/data/cx/ysp/aigc-smart-painter/models/sd-controlnet-openpose'
     torch_dtype: 'torch.float16'
     device: 'cuda:2'
     scheduler: 'UniPCMultistepScheduler'
-    mode: 'on'
+    mode: 'off'
   cloth_feature_extractor:
     class_name: 'AutoFeatureExtractor'
     pretrained_model_name_or_path: '/data/cx/ysp/aigc-smart-painter/models/segformer_b2_clothes'
@@ -79,6 +108,12 @@ pipes:
     pretrained_model_name_or_path: '/data/cx/ysp/aigc-smart-painter/models/segformer_b2_clothes'
     torch_dtype: 'torch.float32'
     device: 'cpu'
+    mode: 'on'
+  openpose_aux:
+    class_name: 'OpenposeDetector'
+    pretrained_model_name_or_path: '/data/cx/ysp/aigc-smart-painter/models/control-net-aux-models/Annotators'
+    torch_dtype: 'torch.float32'
+    device: 'cuda:3'
     mode: 'on'
 
 
