--- a/config/general_config.yaml
+++ b/config/general_config.yaml
@@ -45,7 +45,7 @@ pipes:
     torch_dtype: 'torch.float16'
     device: 'cuda:2'
     scheduler: 'PNDMScheduler'
-    mode: 'off'
+    mode: 'on'
 #  controlnet_inpaint_openpose: #蒙版+contronet控制重绘
 #    class_name: 'StableDiffusionControlNetInpaintPipeline'
 #    pretrained_model_name_or_path: '/data/cx/ysp/aigc-smart-painter/models/chilloutmix_NiPrunedFp32Fix'
