--- a/config/general_config.yaml
+++ b/config/general_config.yaml
@@ -88,6 +88,10 @@ pipes:
         class_name: 'ControlNetModel'
         torch_dtype: 'torch.float32'
         pretrained_model_name_or_path: '/data/cx/ysp/aigc-smart-painter/models/sd-controlnet-canny'
+      - type: "depth"
+        class_name: 'ControlNetModel'
+        torch_dtype: 'torch.float32'
+        pretrained_model_name_or_path: '/data/cx/ysp/aigc-smart-painter/models/sd-controlnet-depth'
     torch_dtype: 'torch.float16'
     device: 'cuda:4'
     scheduler: 'PNDMScheduler'
@@ -134,6 +138,13 @@ pipes:
     torch_dtype: 'torch.float16'
     device: 'cuda:7'
     mode: 'on'
+  midas_aux:
+    class_name: 'MidasDetector'
+    pretrained_model_name_or_path: '/data/cx/ysp/aigc-smart-painter/models/control-net-aux-models/Annotators'
+    torch_dtype: 'torch.float16'
+    device: 'cuda:7'
+    mode: 'on'
+
 
 
 
