--- a/config/general_config.yaml
+++ b/config/general_config.yaml
@@ -6,27 +6,27 @@ fp16: True
 smart_mode: True  #是否自动进行长边等比例缩放 （SD只能比较好的生成512的图片）
 
 # sam相关配置
-sam:
-  checkpoint_path: '/data/cx/ysp/aigc-smart-painter/models/sam/sam_vit_h_4b8939.pth'
-  model_type: 'vit_h'
-  device: 'cuda:4'
+#sam:
+#  checkpoint_path: '/data/cx/ysp/aigc-smart-painter/models/sam/sam_vit_h_4b8939.pth'
+#  model_type: 'vit_h'
+#  device: 'cuda:7'
 
 #yolo相关配置
-yolo:
-    checkpoint_path: '/data/cx/ysp/h2v_screen_live/weights/yolov5s-face-raw.pt'
-    weight_yaml_path: '/data/cx/ysp/h2v_screen_live/config/yolov5_face/yolov5s.yaml'
-    device: 'cuda:4'
-    conf_thres: 0.3
-    iou_thres: 0.05
-    use_fp16: True
-    img_size: 608
+#yolo:
+#    checkpoint_path: '/data/cx/ysp/h2v_screen_live/weights/yolov5s-face-raw.pt'
+#    weight_yaml_path: '/data/cx/ysp/h2v_screen_live/config/yolov5_face/yolov5s.yaml'
+#    device: 'cuda:4'
+#    conf_thres: 0.3
+#    iou_thres: 0.05
+#    use_fp16: True
+#    img_size: 608
 
 # 各类前处理模型配置
 plugins:
   sam:
     checkpoint_path: '/data/cx/ysp/aigc-smart-painter/models/sam/sam_vit_h_4b8939.pth'
     model_type: 'vit_h'
-    device: 'cuda:4'
+    device: 'cuda:7'
     mode: 'on'
 
   yolo:
@@ -121,19 +121,19 @@ pipes:
     pretrained_model_name_or_path: '/data/cx/ysp/aigc-smart-painter/models/segformer_b2_clothes'
     torch_dtype: 'torch.float32'
     device: 'cpu'
-    mode: 'on'
+    mode: 'off'
   segformer:
     class_name: 'SegformerForSemanticSegmentation'
     pretrained_model_name_or_path: '/data/cx/ysp/aigc-smart-painter/models/segformer_b2_clothes'
     torch_dtype: 'torch.float32'
     device: 'cpu'
-    mode: 'on'
+    mode: 'off'
   openpose_aux:
     class_name: 'OpenposeDetector'
     pretrained_model_name_or_path: '/data/cx/ysp/aigc-smart-painter/models/control-net-aux-models/Annotators'
     torch_dtype: 'torch.float16'
     device: 'cuda:7'
-    mode: 'on'
+    mode: 'off'
 
 
 
